--- a/views/mdc/assets/scss/components/snackbar.scss
+++ b/views/mdc/assets/scss/components/snackbar.scss
@@ -3,3 +3,7 @@
 .v-snackbar{
   display: none;
 }
+
+.mdc-snackbar {
+  z-index: 9999;
+}
